syntax = "proto3";
option csharp_namespace = "JetSetGo.UserManagement.Grpc";
package routes;
message GetUserDto{
  string id = 1;
  string name = 2;
  string lastName = 3;
  string mail = 4;
}
message GetUserRequest{string id = 1;}
message GetUserResponse { GetUserDto user =1;}
service UserApp {
  rpc GetUserById(GetUserRequest) returns(GetUserResponse){
  }
}
